--- a/pages/invoice-structure/debit-note.mdx
+++ b/pages/invoice-structure/debit-note.mdx
@@ -14,7 +14,7 @@ Reference:
 |-----------------------|:------------:|-----------------------------------|
 |[cbc:ID](./debit-note/id.mdx) |	[1..1] |Unique identifier for the debit-note.|
 |[cbc:IssueDate](./debit-note/issue-date.mdx) |	[1..1] |Invoice issue date.
-|[cbc:Note](./debit-note/note.mdx) | [0..1] |   Free-form text pertinent to this document. Can contain reasons for Credit Note and Debit Note.
+|[cbc:Note](./debit-note/note.mdx) | [1..1] |   Contain reasons for Credit Note and Debit Note.
 |[cbc:BillingReference](./debit-note/billing-reference.mdx) | [1..1] | A reference to a billing document associated with this document.
 |[cac:AdditionalDocumentReference](./debit-note/additional-document-reference) | [0..n] |  A reference to an additional document associated with this document.  
 |[cbc:DocumentCurrencyCode](./debit-note/document-currency-code.mdx) |	[1..1]	|The currency in which the debit-note is denominated.
