--- a/pages/invoice-structure/debit-note/note.mdx
+++ b/pages/invoice-structure/debit-note/note.mdx
@@ -1,7 +1,7 @@
 # cbc:Note
 Free-form text pertinent to this document. Can contain reasons for Credit Note and Debit Note.
 ## About
-* Occurence: [0..n]
+* Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
