[chore] Update status and clean up submit/send endpoint

--- a/pages/api-reference/accept-document.mdx
+++ b/pages/api-reference/accept-document.mdx
@@ -53,7 +53,7 @@ Authorization: Bearer {access_token}
     "failed_documents": [
         {
             "document_id": "24442432-e78b-4396-87bb-334553344533",
-            "failure_message": "Document not found"
+            "message": "Document not found"
         }
     ]
 }
