--- a/pages/api-reference/get-document-detail.mdx
+++ b/pages/api-reference/get-document-detail.mdx
@@ -38,7 +38,7 @@ Authorization: Bearer {access_token}
     "customer_company_name_en": "NEASARANEW CO., LTD.",
     "customer_company_name_kh": "នាសារ៉ាថ្មី ឯ.ក",
     "customer_vattin": "23144122",
-    "status": "SENT",
+    "status": "DELIVERED",
     "issue_date": "2024-03-05T00:00:00.000Z",
     "due_date": "2024-04-05T00:00:00.000Z",
     "pdf_file": "documents/df5dcf78-e78b-4396-87bb-2d2a44c1302e.pdf",
@@ -67,7 +67,7 @@ Authorization: Bearer {access_token}
 | `customer_company_name_en` | The customer's company name in English.                  |
 | `customer_company_name_kh` | The customer's company name in Khmer.                    |
 | `customer_vattin`          | The VAT identification number of the customer.           |
-| `status`                   | The status of the document (e.g., SENT).                 |
+| `status`                   | The status of the document (e.g., VALID).                 |
 | `issue_date`               | The date when the document was issued.                   |
 | `due_date`                 | The due date for payment.                                |
 | `pdf_file`                 | The file path to the PDF document associated with the invoice. |
