--- a/pages/data-type/document-status.mdx
+++ b/pages/data-type/document-status.mdx
@@ -1,7 +1,8 @@
 
 | Status                    | Description                                                                                     |
 |---------------------------|-------------------------------------------------------------------------------------------------|
-| `PENDING`                 | The invoice has been created but not yet acknowledged.                                          |
+| `VALID`                   | The invoice has been validated by CamInvoice.                                                   |       
+| `DELIVERED`               | The invoice has been successfully sent to the customer on the E-invoicing network               |
 | `ACKNOWLEDGED`            | The invoice has been acknowledged but not yet processed.                                        |
 | `IN_PROCESS`              | The invoice is currently being processed.                                                       |
 | `UNDER_QUERY`             | The invoice has some issues or queries and is being reviewed.                                   |
