--- a/pages/receive-update-event/webhook/webhook-events.mdx
+++ b/pages/receive-update-event/webhook/webhook-events.mdx
@@ -2,7 +2,7 @@
 
 
 
-## Doucument "SENT" Event
+## Document "SENT" Event
 This event is triggered when a document is sent to the customer.
 
 ### Webhook Event Payload
