--- a/pages/api-reference/list-documents.mdx
+++ b/pages/api-reference/list-documents.mdx
@@ -43,7 +43,7 @@ Authorization: Bearer {access_token}
             "customer_company_name_en": "NEASARANEW CO., LTD.",
             "customer_company_name_kh": "នាសារ៉ាថ្មី ឯ.ក",
             "customer_vattin": "23144122",
-            "status": "SENT",
+            "status": "VALID",
             "issue_date": "2024-03-05T00:00:00.000Z",
             "due_date": null,
             "created_at": "2024-03-07T07:16:04.991Z",
@@ -85,7 +85,7 @@ Authorization: Bearer {access_token}
             "customer_company_name_en": "NEASARANEW CO., LTD.",
             "customer_company_name_kh": "នាសារ៉ាថ្មី ឯ.ក",
             "customer_vattin": "23144122",
-            "status": "SENT",
+            "status": "VALID",
             "issue_date": "2024-03-05T00:00:00.000Z",
             "due_date": null,
             "created_at": "2024-03-07T07:16:04.991Z",
