--- a/pages/api-reference/update-document-status.mdx
+++ b/pages/api-reference/update-document-status.mdx
@@ -35,7 +35,8 @@ Authorization: Bearer {access_token}
 
 | Status                    | Description                                                                                     |
 |---------------------------|-------------------------------------------------------------------------------------------------|
-| `PENDING`                 | The invoice has been created but not yet acknowledged.                                          |
+| `VALID`                   | The invoice has been validated by CamInvoice.                                                   |       
+| `DELIVERED`               | The invoice has been successfully sent to the customer on the E-invoicing network               |
 | `ACKNOWLEDGED`            | The invoice has been acknowledged but not yet processed.                                        |
 | `IN_PROCESS`              | The invoice is currently being processed.                                                       |
 | `UNDER_QUERY`             | The invoice has some issues or queries and is being reviewed.                                   |
@@ -43,6 +44,7 @@ Authorization: Bearer {access_token}
 | `ACCEPTED`                | The invoice has been fully accepted and is awaiting payment.                                    |
 | `REJECTED`                | The invoice has been rejected and will not be processed further.                                |
 | `PAID`                    | The invoice has been paid in full.                                                              |
+
 
 ### Example Request Body
 
