Add webhook event for revoke

--- a/pages/api-reference/revoke-member.mdx
+++ b/pages/api-reference/revoke-member.mdx
@@ -46,4 +46,5 @@ Authorization: Basic base64encode({clientId:clientSecret})
 | message           | error message                                         |
 
 
-
+** System partner can listen to webhook event ** ENTITY.REVOKED for revoked from E-invoice system.import { Bleed, Callout } from 'nextra-theme-docs'
+import React from 'react'
