--- a/pages/data-type/event-type.mdx
+++ b/pages/data-type/event-type.mdx
@@ -3,3 +3,4 @@
 | DOCUMENT.RECEIVED    | Indicates that a document has been received.  |
 | DOCUMENT.SENT        | Indicates that a document has been sent.      |
 | DOCUMENT.STATUS_UPDATED | Indicates that a document status has been updated. |
+| ENTITY.REVOKED | Indicates the business was revoked the connected account. |
