--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -20,7 +20,7 @@ This technical documentation provides all the necessary information needed to in
 
 ![](./workflow.png)
 
-As illustrated above, when a CamInvoice user generates an XML e-invoice using their system or our Free Merchant Portal, they must send the invoice to CamInvoice via our API.
+As illustrated above, when a CamInvoice user generates an XML e-invoice using their system or our Free E-invoice Portal, they must send the invoice to CamInvoice via our API.
 
 CamInvoice validates the invoice through multiple checks, including XML structure validation, UBL field validation, General Department of Taxation (GDT) rules validation, and e-KYB validation. Once the invoice passes all validations, CamInvoice attests and stores it on the blockchain via CamDL.
 
