[chore] Add Payment Terms

--- a/pages/invoice-structure/credit-note.mdx
+++ b/pages/invoice-structure/credit-note.mdx
@@ -20,6 +20,7 @@ Reference:
 |[cbc:DocumentCurrencyCode](./credit-note/document-currency-code.mdx) |	[1..1]	|The currency in which the invoice is denominated.
 |[cac:AccountingSupplierParty](./credit-note/accounting-supplier-party.mdx) |	[1..1] |	Party supplying the goods or services in the invoice.
 |[cac:AccountingCustomerParty](./credit-note/accounting-customer-party.mdx) |	[1..1] |	Party to whom the goods or services are supplied.
+|[cac:PaymentTerms](./credit-note/payment-terms.mdx) | [0..1] | The terms and conditions of a payment agreement. |
 |[cac:TaxExchangeRate](./credit-note/tax-exchange-rate.mdx) |	[0..1] |	Exchange rate applied for tax calculation in invoices involving conversion, mandatory if document currency is not Khmer Riel(KHR).
 |[cac:AllowanceCharge](./credit-note/allowance-charge.mdx) |	[1..n] |	A discount or charge that applies to the invoice on document level.
 |[cac:TaxTotal](./credit-note/tax-total.mdx) |	[1..1] |	Total tax amount for each specific tax.
