--- a/pages/invoice-structure/debit-note.mdx
+++ b/pages/invoice-structure/debit-note.mdx
@@ -20,6 +20,7 @@ Reference:
 |[cbc:DocumentCurrencyCode](./debit-note/document-currency-code.mdx) |	[1..1]	|The currency in which the debit-note is denominated.
 |[cac:AccountingSupplierParty](./debit-note/accounting-supplier-party.mdx) |	[1..1] |	Party supplying the goods or services in the debit-note.
 |[cac:AccountingCustomerParty](./debit-note/accounting-customer-party.mdx) |	[1..1] |	Party to whom the goods or services are supplied.
+|[cac:PaymentTerms](./debit-note/payment-terms.mdx) | [0..1] | The terms and conditions of a payment agreement. |
 |[cac:AllowanceCharge](./debit-note/allowance-charge.mdx) |	[0..n] |	A discount or charge that applies to the debit-note on document level.
 |[cac:TaxExchangeRate](./debit-note/tax-exchange-rate.mdx) |	[0..1] |	Exchange rate applied for tax calculation in debit-notes involving conversion, mandatory if document currency is not Khmer Riel(KHR).
 |[cac:TaxTotal](./debit-note/tax-total.mdx) |	[1..1] |		Total tax amount for each specific tax.
