--- a/pages/invoice-structure/invoice.mdx
+++ b/pages/invoice-structure/invoice.mdx
@@ -26,6 +26,7 @@ Reference:
 |[cac:AdditionalDocumentReference](./invoice/additional-document-reference) | [0..n] |  A reference to an additional document associated with this document.  
 |[cac:AccountingSupplierParty](./invoice/accounting-supplier-party.mdx) |	[1..1] |	Party supplying the goods or services in the invoice.
 |[cac:AccountingCustomerParty](./invoice/accounting-customer-party.mdx) |	[1..1] |	Party to whom the goods or services are supplied.
+|[cac:PaymentTerms](./invoice/payment-terms.mdx) | [0..1] | The terms and conditions of a payment agreement. |
 |[cac:AllowanceCharge](./invoice/allowance-charge.mdx) |	[0..n] |	A discount or charge that applies to the invoice on document level.
 |[cac:TaxExchangeRate](./invoice/tax-exchange-rate.mdx) |	[0..1] |	Exchange rate applied for tax calculation in invoices involving conversion, mandatory if document currency is not Khmer Riel(KHR).
 |[cac:TaxTotal](./invoice/tax-total.mdx) |	[1..1] |		Total tax amount for each specific tax.
