--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,8 +12,8 @@ This technical documentation provides all the necessary information needed to in
 
 - [Getting Started](./getting-started/overview): A guide to help you begin your integration with CamInvoice.
 - [API Reference](./api-reference/authentication): Detailed information about our API endpoints.
-- [Invoice Structure](./invoice-structure): Specifications on the required formats for invoices and debit/credit notes.
-- [Receive Update Event](./receive-update-event): Information on how to configure and use webhooks for receiving notifications.
+- [Invoice Structure](./invoice-structure/invoice): Specifications on the required formats for invoices and debit/credit notes.
+- [Receive Update Event](./receive-update-event/webhook): Information on how to configure and use webhooks for receiving notifications.
 - [Document Type](./data-type/document-type): Details on the various document types supported by CamInvoice.
 
 ## How It Works
