--- a/pages/api-reference/get-document-detail.mdx
+++ b/pages/api-reference/get-document-detail.mdx
@@ -48,8 +48,7 @@ Authorization: Bearer {access_token}
     "tax_inclusive_amount": 11,
     "document_type": "INVOICE",
     "reference_document_id": null,
-    "reference_document_number": null,
-    "document": "PEludm9pY2UgeG1sbnM6Y2FjPSJ1cm46b2FzaXM6bmFtZXM6c3BlY2lmaWNhdGlvbjp1Ymw6c2NoZW1hOnhzZDpDb21..."
+    "reference_document_number": null
 }
 ```
 
@@ -78,7 +77,6 @@ Authorization: Bearer {access_token}
 | `document_type`            | The type of document (e.g., INVOICE).                    |
 | `reference_document_id`    | The identifier for any reference document.               |
 | `reference_document_number`| The number assigned to any reference document.           |
-| `document`                 | The Base64 encoded representation of the XML document.   |
 
 **HTTP Status 404 (Not Found)**
 
