--- a/pages/data-type/event-type.mdx
+++ b/pages/data-type/event-type.mdx
@@ -1,6 +1,6 @@
 | Value                | Description                                   |
 |----------------------|-----------------------------------------------|
 | DOCUMENT.RECEIVED    | Indicates that a document has been received.  |
-| DOCUMENT.SENT        | Indicates that a document has been sent.      |
+| DOCUMENT.DELIVERED        | Indicates that a document has been delivered.      |
 | DOCUMENT.STATUS_UPDATED | Indicates that a document status has been updated. |
 | ENTITY.REVOKED | Indicates the business was revoked the connected account. |
