Add unset webhook api

--- a/pages/api-reference/list-documents.mdx
+++ b/pages/api-reference/list-documents.mdx
@@ -23,7 +23,7 @@ Authorization: Bearer {access_token}
 | `type`          | String  | The type of documents to retrieve. Possible values: 'received' or 'send'. | 'send'    |
 | `page`          | Integer | The page number for pagination.                                       | 1         |
 | `size`          | Integer | The number of documents per page.                                     | 20        |
-| `document_type` | String  | The type of document to retrieve. Default is "INVOICE".               | "INVOICE" |
+| `document_type` | String  | The type of document to retrieve.               | null |
 
 ### Response
 
