--- a/pages/invoice-structure/debit-note/accounting-customer-party/party/party-legal-entity/company-id.mdx
+++ b/pages/invoice-structure/debit-note/accounting-customer-party/party/party-legal-entity/company-id.mdx
@@ -1,10 +1,10 @@
 # cbc:CompanyID
 
-An identifier for the party as registered within a company registration scheme. In our case, this would be the Ministry of Commerce (MOC) Single ID.
+An identifier for the party as registered within a company registration scheme. In our case, this would be the Ministry of Commerce (MOC) Single ID. In the case the party is an end-consumer or organization without this ID, please put 0000.
 
 ## About
 
-- Occurrence: [0..1]
+- Occurrence: [1..1]
 - Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
