--- a/pages/invoice-structure/invoice/accounting-supplier-party/party/party-legal-entity.mdx
+++ b/pages/invoice-structure/invoice/accounting-supplier-party/party/party-legal-entity.mdx
@@ -9,8 +9,8 @@ Details of the legal entity associated with the party.
 
 | Data Field                                  | Occurrence | Definition |
 |---------------------------------------------|:----------:|------------|
-| [cbc:RegistrationName](./RegistrationName.mdx)           |   [0..1]   | The name of the party as registered with the relevant legal authority. |
-| [cbc:CompanyID](./CompanyID.mdx)                        |   [0..1]   | An identifier for the party as registered within a company registration scheme. |
+| [cbc:RegistrationName](./RegistrationName.mdx)           |   [1..1]   | The name of the party as registered with the relevant legal authority. |
+| [cbc:CompanyID](./CompanyID.mdx)                        |   [1..1]   | An identifier for the party as registered within a company registration scheme. If there is none, please put 0000. |
 
 ```xml 
 <cac:PartyLegalEntity>
