[Fix] Missing billing reference in credit note

--- a/pages/invoice-structure/credit-note/billing-reference.mdx
+++ b/pages/invoice-structure/credit-note/billing-reference.mdx
@@ -1,10 +1,10 @@
 # cac:BillingReference
 A reference to a billing document associated with this document. 
 ## About
-* Occurence: [0..n]
+* Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2
 
 ## Child Elements
 | Data Field            | Occurrence |                        Definition |
 |-----------------------|:------------:|-----------------------------------|
-|[cbc:ID](./ID.mdx) |	[1..1] |	Unique identifier for the invoice.|
+|[cac:InvoiceDocumentReference](./billing-reference/invoice-document-reference.mdx) |	[1..1] | A reference to an invoice.|
