--- a/pages/invoice-structure/debit-note/billing-reference.mdx
+++ b/pages/invoice-structure/debit-note/billing-reference.mdx
@@ -1,7 +1,7 @@
 # cac:BillingReference
 A reference to a billing document associated with this document. 
 ## About
-* Occurence: [0..n]
+* Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2
 
 ## Child Elements
